--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -14,7 +14,7 @@
     "from qaoa_mincost_sat import problem_circuit as quso_problem_circuit\n",
     "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
     "from configproblem.util.visualization import plot_counts_histogram, plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
-    "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance, set_seed\n",
+    "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance_set\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
     "from qubovert import boolean_var"
@@ -28,6 +28,31 @@
    },
    "outputs": [],
    "source": [
+    "# instance generation config\n",
+    "use_predefined_instances = False\n",
+    "\n",
+    "num_instances = 10\n",
+    "num_features = 6\n",
+    "min_num_clauses = 2\n",
+    "max_num_clauses = 3\n",
+    "min_num_literals_per_clause = 3\n",
+    "max_num_literals_per_clause = 3\n",
+    "min_feature_cost = 0\n",
+    "max_feature_cost = 0\n",
+    "alpha_sat = 1000\n",
+    "seed = 42\n",
+    "generation_type = 'alpha_sat' # 'random', 'growing_num_clauses', 'append_clauses' or 'alpha_sat'\n",
+    "# instance used as starting point for generation type 'alpha_sat'\n",
+    "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
+    "start_instance = ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                  [(x3, False), (x4, False)],\n",
+    "                                  [(x3, True), (x4, True)],\n",
+    "                                  [(x5, False), (x6, True)]],\n",
+    "                                 [x1, x2, x3, x4, x5, x6],\n",
+    "                                 [30, 20, 25, 50, 10, 10],\n",
+    "                                 1000)\n",
+    "\n",
+    "\n",
     "# run config\n",
     "run_print_hamiltonians = False\n",
     "run_cost_landscape = False\n",
@@ -56,79 +81,73 @@
    },
    "outputs": [],
    "source": [
-    "# define binary vars needed for problem instances\n",
-    "x1, x2, x3, x4, x5, x6, x7, x8, x9, x10 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6'), boolean_var('x7'), boolean_var('x8'), boolean_var('x9'), boolean_var('x10')\n",
+    "if not use_predefined_instances:\n",
+    "    problem_instances = generate_problem_instance_set(num_instances, num_features, min_num_clauses, max_num_clauses, min_num_literals_per_clause, max_num_literals_per_clause, min_feature_cost, max_feature_cost, alpha_sat, seed=seed, generation_type=generation_type, start_instance=start_instance)\n",
+    "else:\n",
+    "    # define binary vars needed for problem instances\n",
+    "    x1, x2, x3, x4, x5, x6, x7, x8, x9, x10 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6'), boolean_var('x7'), boolean_var('x8'), boolean_var('x9'), boolean_var('x10')\n",
     "\n",
-    "set_seed(42)\n",
-    "\n",
-    "# generate set of random problem instances to evaluate\n",
-    "problem_instances = []\n",
-    "for i in range(2, 7):\n",
-    "    for j in range(1, 6):\n",
-    "        problem_instances.append(generate_problem_instance(6, i, i, 3, 3, 0, 0, 1000))\n",
-    "\n",
-    "\n",
-    "# define set of problem instances to evaluate\n",
-    "# problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6],\n",
-    "#                                      [10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      # more variables\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False), (x9, True)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6, x7, x8, x9],\n",
-    "#                                      [10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      # more literals per clause\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True), (x3, False)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True), (x5, True)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False), (x7, False)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6, x7],\n",
-    "#                                      [10, 10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      # more variables and move literals per clause\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False), (x9, True), (x10, False)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6, x7, x8, x9, x10],\n",
-    "#                                      [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      # less clauses\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True)]],\n",
-    "#                                      [x1, x2, x3, x4],\n",
-    "#                                      [10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6],\n",
-    "#                                      [10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      ProblemInstance([[(x2, True), (x3, False), (x4, True)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6],\n",
-    "#                                      [10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      # more clauses\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False)],\n",
-    "#                                       [(x4, True), (x6, True)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6],\n",
-    "#                                      [10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000),\n",
-    "#                      # even more clauses\n",
-    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
-    "#                                       [(x2, True), (x3, False), (x4, True)],\n",
-    "#                                       [(x3, True), (x5, False), (x6, False)],\n",
-    "#                                       [(x4, True), (x6, True)],\n",
-    "#                                       [(x1, False), (x4, False), (x5, True)]],\n",
-    "#                                      [x1, x2, x3, x4, x5, x6],\n",
-    "#                                      [10, 10, 10, 10, 10, 10],\n",
-    "#                                      1000)]"
+    "    # define set of problem instances to evaluate\n",
+    "    problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6],\n",
+    "                                         [10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         # more variables\n",
+    "                         ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False), (x9, True)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6, x7, x8, x9],\n",
+    "                                         [10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         # more literals per clause\n",
+    "                         ProblemInstance([[(x1, True), (x2, True), (x3, False)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True), (x5, True)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False), (x7, False)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6, x7],\n",
+    "                                         [10, 10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         # more variables and move literals per clause\n",
+    "                         ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False), (x9, True), (x10, False)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6, x7, x8, x9, x10],\n",
+    "                                         [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         # less clauses\n",
+    "                         ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True)]],\n",
+    "                                         [x1, x2, x3, x4],\n",
+    "                                         [10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6],\n",
+    "                                         [10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         ProblemInstance([[(x2, True), (x3, False), (x4, True)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6],\n",
+    "                                         [10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         # more clauses\n",
+    "                         ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False)],\n",
+    "                                          [(x4, True), (x6, True)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6],\n",
+    "                                         [10, 10, 10, 10, 10, 10],\n",
+    "                                         1000),\n",
+    "                         # even more clauses\n",
+    "                         ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                          [(x2, True), (x3, False), (x4, True)],\n",
+    "                                          [(x3, True), (x5, False), (x6, False)],\n",
+    "                                          [(x4, True), (x6, True)],\n",
+    "                                          [(x1, False), (x4, False), (x5, True)]],\n",
+    "                                         [x1, x2, x3, x4, x5, x6],\n",
+    "                                         [10, 10, 10, 10, 10, 10],\n",
+    "                                         1000)]"
    ]
   },
   {
